Implement adopted task management in NettyScheduler